--- a/manifest.json
+++ b/manifest.json
@@ -25,5 +25,6 @@
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#E53357",
-  "theme_color": "#fecd1a"
+  "theme_color": "#fecd1a",
+  "gcm_sender_id": "653317226796"
 }
